buttons added instead of long text

--- a/index.html
+++ b/index.html
@@ -506,19 +506,14 @@
                   "working class" to people without a college education, whether
                   or not they work in a blue-collar job.
                 </p>
-
-                <!-- Third paragraph about the company's commitment to supporting blue-collar workers -->
-                <p
-                  class="capitalize"
+                <!-- See More Button -->
+                <div
+                  class="mt-4 lg:mt-8"
                   data-aos="fade-right"
                   data-aos-duration="1000"
                 >
-                  Our company is committed to supporting blue-collar workers by
-                  providing a platform that values their skills, training, and
-                  experiences. We recognize the unique challenges they face and
-                  strive to match them with employers who appreciate their hard
-                  work and dedication.
-                </p>
+                  <button class="primary">See More</button>
+                </div>
               </div>
             </aside>
 
@@ -656,18 +651,13 @@
                   or not they work in a blue-collar job.
                 </p>
 
-                <!-- Third paragraph: Company’s commitment to supporting blue-collar workers through matching skills with employers -->
-                <p
-                  class="capitalize"
+                <div
+                  class="mt-4 lg:mt-8"
                   data-aos="fade-right"
                   data-aos-duration="1000"
                 >
-                  Our company understands these unique educational paths and is
-                  dedicated to connecting blue-collar workers with the right
-                  employers. We support workers in finding opportunities that
-                  align with their skills and training, and we help employers
-                  find the skilled labor they need.
-                </p>
+                  <button class="primary">See More</button>
+                </div>
               </div>
             </aside>
 
